# ctxnote

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish.yml  push.yml
src/: conf.rs  ctx.rs  main.rs  note.rs  util.rs
src/cmd/: add.rs  get.rs  mod.rs  put.rs
src/cmd/conf/: get.rs  mod.rs  set.rs
src/cmd/ctx/: get.rs  init.rs  list.rs  mod.rs  mv.rs  rm.rs  set.rs
src/conf/: data.rs  mod.rs  user.rs  usr.rs
src/ctx/: mod.rs  reg.rs
src/io/: mod.rs
src/io/conf/: data.rs  mod.rs
src/io/ctx/: reg.rs
