[package]
name = "note"
version = "0.1.0"
authors = ["sindrekjr <sindrekjr@hotmail.com>"]
description = "A command line tool for taking notes"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
