[package]
name = "ctxnote"
version = "0.1.1"
authors = ["sindrekjr <sindrekjr@hotmail.com>"]
edition = "2021"
description = "A command line tool for taking notes"
readme = "README.md"
homepage = "https://github.com/sindrekjr/ctxnote"
repository = "https://github.com/sindrekjr/ctxnote"
license-file = "LICENSE.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "note"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
